# rust-cli-template

./: Cargo.toml
src/: error.rs  main.rs
tests/: test_main.rs
