[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
clap-verbosity-flag = "*"
confy = "*"
env_logger = "*"
human-panic = "*"
log = "*"

[dev-dependencies]
assert_cmd = "*"
# assert_fs = "*"
# dir-diff = "*"
# duct = "*"
# predicates = "*"
pretty_assertions = "*"
# rexpect = "*"
spectral = "*"
# tempfile = "*"
